--- a/src/views/Login/Login.css
+++ b/src/views/Login/Login.css
@@ -1,4 +1,44 @@
+.auth {
+    width: 50%;
+    margin: 100px auto;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 50px;
+}
+
+.authFormHeader {
+    margin: 0 auto 40px auto;
+    width: 80%;
+    font-size: 1.2rem;
+}
+
+.authFormHeader p {
+    text-align: center;
+}
+
+.authFormHeader span {
+    color: blue;
+    font-weight: bold;
+}
+
+.authFormHeader span:hover {
+    cursor: pointer;
+}
+
 .authForm {
     display: flex;
     flex-direction: column;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.authForm input {
+    font-size: 1.4rem;
+    width: 90%;
+    padding: 10px;
+}
+
+.authForm button {
+    width: 50%;
+    margin: 40px auto 0 auto;
 }
